# xontrib-vox-completion

./: LICENSE  README.rst  setup.cfg  setup.py
xontrib/: vox_completion.xsh
