[metadata]
name = xontrib-vox-completion
version = 0.1.0
author = Austin Bingham
author_email = austin.bingham@gmail.com
description = Command completion for the vox command
long_description = file: README.rst
url = https://github.com/abingham/xontrib-vox-completion
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.5

install_requires =
    xonsh
